--- a/css/main.css
+++ b/css/main.css
@@ -356,4 +356,19 @@ li {
   list-style: inside url("../media/svg/circle.svg");
 }
 
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10%;
+}
 
+.button {
+  background-color: #f55902;
+  color: #fff;
+  border: transparent;
+  padding: 1rem;
+  cursor: pointer;
+}
